# server/src/main/kotlin/dev/afalabarce/wordlechains/api/controllers/features/authentication/models/DeveloperApiKey.kt
@@ -1,0 +1,9 @@
+package dev.afalabarce.wordlechains.api.controllers.features.authentication.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class DeveloperApiKey(
+    val developerEmail: String,
+    val developerApiKey: String,
+)
