# server/src/main/kotlin/dev/afalabarce/wordlechains/api/database/features/authentication/Mapper.kt
@@ -1,0 +1,9 @@
+package dev.afalabarce.wordlechains.api.database.features.authentication
+
+import dev.afalabarce.wordlechains.api.controllers.features.authentication.models.DeveloperApiKey
+
+fun developerApiKeyDaoToModel(dao: DeveloperApiKeyDao): DeveloperApiKey = DeveloperApiKey(
+    developerEmail = dao.developerEmail,
+    developerApiKey = dao.developerApiKey.value.toString()
+
+)
